fix: adjust text alignment for jersey-cta in footer and update media query for mobile responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -5115,13 +5115,15 @@ footer .row {
 }
 
 .jersey-cta {
-    text-align: center;
+    text-align: left;
 }
 
-/* Media Query für Mobilgeräte */
 @media screen and (max-width: 768px) {
     .jersey-content {
         flex-direction: column;
+    }
+    .jersey-cta {
+        text-align: center;
     }
     
     .slider-images {
